ezyme test support added

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
     "@types/chai": "^4.2.5",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jasmine": "^3.4.6",
+    "@types/jasmine-enzyme": "^7.0.0",
+    "@types/jest": "^24.0.23",
     "@types/mocha": "^5.2.7",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -26,11 +30,15 @@
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
+    "jasmine-enzyme": "^7.1.2",
     "jasmine-ts": "^0.3.0",
+    "jest": "^24.9.0",
     "mocha": "^6.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
