--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mocha": "^5.2.7",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -40,6 +41,7 @@
     "jasmine-ts": "^0.3.0",
     "jest": "^24.9.0",
     "mocha": "^6.2.2",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.3",
