--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/jasmine-ts"
-  },
+    ,"server:apptodos" : "parcel parcels/parcel.AppTodos.html"
+  }, 
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -58,5 +59,7 @@
     "ts-node": "^8.5.2",
     "typescript": "^3.6.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.0.4"
+  }
 }
