--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/jasmine-ts",
-    "server:todos": "parcel parcels/parcel.AppTodos.html"
+    "server:todos": "parcel parcels/parcel.AppTodos.html",
+    "server:abstract": "parcel parcels/parcel.abstract.html"
   },
   "keywords": [],
   "author": "",
